--- a/report/references.bib
+++ b/report/references.bib
@@ -67,3 +67,32 @@ title = {Reconstructing Surfaces of Particle-Based Fluids Using Anisotropic Kern
 volume = {32},
 booktitle = {ACM Transactions on Graphics}
 }
+
+@article{Akinci,
+ author = {Akinci, Nadir and Ihmsen, Markus and Akinci, Gizem and Solenthaler, Barbara and Teschner, Matthias},
+ title = {Versatile Rigid-fluid Coupling for Incompressible SPH},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2012},
+ volume = {31},
+ number = {4},
+ month = jul,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {62:1--62:8},
+ articleno = {62},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2185520.2185558},
+ doi = {10.1145/2185520.2185558},
+ acmid = {2185558},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {fluid simulation, fluid-solid coupling, physically-based animation, smoothed particle hydrodynamics}
+} 
+
+@book{Bridson2016,
+    author = {Bridson, R. and Müller-Fischer, M.},
+    title = {Fluid Simulation for Computer Graphics},
+    edition = {2},
+    year = {2016},
+    publisher = {Taylor and Francis Group, LLC}
+}
