--- a/report/references.bib
+++ b/report/references.bib
@@ -81,18 +81,24 @@ booktitle = {ACM Transactions on Graphics}
  pages = {62:1--62:8},
  articleno = {62},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/2185520.2185558},
- doi = {10.1145/2185520.2185558},
- acmid = {2185558},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {fluid simulation, fluid-solid coupling, physically-based animation, smoothed particle hydrodynamics}
 } 
 
-@book{Bridson2016,
-    author = {Bridson, R. and Müller-Fischer, M.},
-    title = {Fluid Simulation for Computer Graphics},
-    edition = {2},
-    year = {2016},
-    publisher = {Taylor and Francis Group, LLC}
-}
+@article{Bridson2016,
+ author = {Zhu, Yongning and Bridson, Robert},
+ title = {Animating Sand As a Fluid},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2005},
+ volume = {24},
+ number = {3},
+ month = jul,
+ year = {2005},
+ issn = {0730-0301},
+ pages = {965--972},
+ numpages = {8},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {animation, physical simulation, sand, water},
+} 
